--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/preview" />
+        app:srcCompat="@drawable/homepage_background" />
 
     <TextView
         android:id="@+id/textView2"
@@ -28,6 +28,9 @@
         android:text="Juan Dela Cruz\nG12 STEM AH\n
 UBBC - SHS
 "
+
+
+        android:visibility="invisible"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -42,6 +45,7 @@ UBBC - SHS
         android:gravity="center"
         android:text="LEVEL 01
 "
+        android:visibility="invisible"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -55,6 +59,8 @@ UBBC - SHS
         android:layout_height="169dp"
         android:background="@drawable/ic_launcher_background"
         android:clipToOutline="true"
+
+        android:visibility="invisible"
         android:outlineProvider="background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +74,8 @@ UBBC - SHS
         android:layout_width="254dp"
         android:layout_height="63dp"
         android:text="PLAY"
+
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -76,7 +84,9 @@ UBBC - SHS
         android:id="@+id/button7"
         android:layout_width="254dp"
         android:layout_height="63dp"
-        android:text="PLAY"
+        android:text="HEALTH STATUS"
+        android:visibility="invisible"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -85,7 +95,9 @@ UBBC - SHS
         android:id="@+id/button8"
         android:layout_width="254dp"
         android:layout_height="63dp"
-        android:text="PLAY"
+        android:text="PHYSICAL ASSESSMENT"
+        android:visibility="invisible"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
@@ -95,12 +107,45 @@ UBBC - SHS
         android:layout_width="254dp"
         android:layout_height="63dp"
         android:text="TUTORIAL"
+        android:visibility="invisible"
+
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button8"
         app:layout_constraintVertical_bias="0.082" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="361dp"
+        android:layout_height="157dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/beginner_button" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="373dp"
+        android:layout_height="143dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:srcCompat="@drawable/basic_button" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="367dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="140dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.342"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView2"
+        app:srcCompat="@drawable/advanced_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
