--- a/app/src/main/res/layout/activity_advanced.xml
+++ b/app/src/main/res/layout/activity_advanced.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4"
-        app:srcCompat="@drawable/_3" />
+        app:srcCompat="@drawable/_3_3_3" />
 
     <Button
         android:id="@+id/button17"
