--- a/app/src/main/res/layout/activity_beginner.xml
+++ b/app/src/main/res/layout/activity_beginner.xml
@@ -62,6 +62,20 @@
         app:layout_constraintVertical_bias="0.832" />
 
     <Button
+        android:id="@+id/button24"
+        android:layout_width="224dp"
+        android:layout_height="43dp"
+        android:background="#00FFFFFF"
+        android:visibility="invisible"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.832" />
+
+    <Button
         android:id="@+id/button20"
         android:layout_width="186dp"
         android:layout_height="63dp"
