--- a/app/src/main/res/layout/activity_physical_fitness.xml
+++ b/app/src/main/res/layout/activity_physical_fitness.xml
@@ -63,7 +63,8 @@
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/button13"
-        tools:layout_editor_absoluteX="57dp" />
+        tools:layout_editor_absoluteX="57dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView17"
@@ -87,5 +88,6 @@ ASSESMENT TEST
         android:layout_height="217dp"
         app:layout_constraintTop_toBottomOf="@+id/textView18"
         app:srcCompat="@drawable/image__6_"
-        tools:layout_editor_absoluteX="-62dp" />
+        tools:layout_editor_absoluteX="-62dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
