--- a/app/src/main/res/layout/activity_spin_wheel.xml
+++ b/app/src/main/res/layout/activity_spin_wheel.xml
@@ -2,25 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <ImageView
         android:id="@+id/wheelImageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="397dp"
         android:layout_centerInParent="true"
         android:contentDescription="@string/app_name"
         android:onClick="spinWheel"
-        android:src="@drawable/wheel_image"
+        android:src="@drawable/easy"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/spinButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spin"
         android:layout_below="@id/wheelImageView"
         android:layout_centerHorizontal="true"
-        android:onClick="spinWheel" />
+        android:onClick="spinWheel"
+        android:text="Spin" />
 
 </RelativeLayout>
